# libexc

./: README.md  meson.build
include/: exceptions.h  libec.h  meson.build  ptr.h  vector.h
src/: exceptions.c  main.c  meson.build  vector.c
test/: exceptions.c  meson.build  vector.c
