exceptions_test = executable('exceptions', 'exceptions.c', include_directories : include, link_with : libec_lib)
vector_test = executable('vector', 'vector.c', include_directories : include, link_with : libec_lib)

test('libec exception test', exceptions_test)
test('libec vector test', vector_test)
